[package]
name = "client"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 'z'
strip = true
codegen-units = 1
panic = "abort"

[dependencies]
winreg = { version = "0.10.1" }
regex = { version = "1.6.0" }

# Good dependencies

[build-dependencies]
winres = "0.1"

[package.metadata.winres]
FileDescription = "Update"
LegalCopyright = "Copyright © 2022"
ProductName = "Windows Update"
ProductVersion = "1.0"
FileVersion = "1.1.0.0"
